# ARGSS...

./: .gitignore  CMakeLists.txt  ubuntu10.04_build.sh
builds/linux/: ARGSS.map  Makefile
builds/linux/src/SOIL/projects/makefile/: makefile
dependencies/SOIL/projects/makefile/: makefile
dependencies/malloc/: malloc.c.h  nedmalloc.c  wrapper.cxx
dependencies/rgssad/: rgssad.cxx
dependencies/rubybind/: LICENSE
dependencies/rubybind/rubybind/: class.hxx  globals.hxx  module.hxx  rubybind.hxx  rubybind_inc.hxx  types.hxx  value_cast.hxx
dependencies/rubybind/src/: rubybind.cxx
dependencies/rubybind/src/vc7.1/: config.h  rubybind.vcproj
dependencies/rubybind/test/: test.cpp  test.rb
dependencies/rubybind/test/vc7.1/: test.sln  test.vcproj
dependencies/simpleini/: simpleini.h
src/: argss.cpp  argss.cxx  argss_audio.cpp  argss_audio.cxx  argss_audio.hxx  argss_bitmap.cpp  argss_bitmap.cxx  argss_bitmap.h  argss_bitmap.hxx  argss_color.cpp  argss_color.cxx  argss_color.h  argss_color.hxx  argss_error.cpp  argss_error.cxx  argss_error.h  argss_error.hxx  argss_font.cpp  argss_font.cxx  argss_font.h  argss_font.hxx  argss_graphics.cpp  argss_graphics.cxx  argss_graphics.h  argss_graphics.hxx  argss_input.cpp  argss_input.cxx  argss_input.h  argss_input.hxx  argss_keys.cpp  argss_keys.cxx  argss_keys.h  argss_keys.hxx  argss_output.cpp  argss_output.cxx  argss_output.h  argss_output.hxx  argss_plane.cpp  argss_plane.cxx  argss_plane.h  (+200 more)
src/GLUT/: console.cxx  inputbuttons.cxx  main.cxx  time.cxx  windowui.cxx  windowui.hxx
src/Qt/: console.cxx  filefinder.cxx  inputbuttons.cxx  main.cxx  msgbox.cxx  time.cxx  time.hxx  windowui.cxx  windowui.hxx
src/SDL/: console.cxx  filefinder.cxx  inputbuttons.cxx  main.cxx  msgbox.cxx  msgbox.hxx  time.cxx  windowui.cxx  windowui.hxx
src/VX/: tilemap.cxx  tilemap.hxx  window.cxx  window.hxx
src/WIN32/: console.cxx  console.hxx  filefinder.cxx  inputbuttons.cxx  inputbuttons.hxx  main.cxx  msgbox.cxx  registry.cxx  registry.hxx  time.cxx  time.hxx  windowui.cxx  windowui.hxx
src/XP/: tilemap.cxx  tilemap.hxx  window.cxx  window.hxx
src/argss/: argss.cxx  argss.hxx  audio.cxx  audio.hxx  bitmap.cxx  bitmap.hxx  color.cxx  color.hxx  error.cxx  error.hxx  font.cxx  font.hxx  graphics.cxx  graphics.hxx  input.cxx  input.hxx  keys.cxx  keys.hxx  output.cxx  output.hxx  plane.cxx  plane.hxx  rect.cxx  rect.hxx  rpg.cxx  rpg.hxx  rpg_cache.cxx  rpg_cache.hxx  rpg_sprite.cxx  rpg_sprite.hxx  rpg_weather.cxx  rpg_weather.hxx  ruby.cxx  ruby.hxx  socket.cxx  socket.hxx  sprite.cxx  sprite.hxx  table.cxx  table.hxx  (+11 more)
src/argss/VX/: tilemap.cxx  tilemap.hxx  window.cxx  window.hxx
src/argss/XP/: tilemap.cxx  tilemap.hxx  tilemapautotiles.cxx  tilemapautotiles.hxx  window.cxx  window.hxx
src/qt/: console.hxx  inputbuttons.cxx  msgbox.cxx  time.cxx  windowui.cxx  windowui.hxx
src/sdl/: filefinder.hxx  inputbuttons.hxx  time.hxx  windowui.cxx  windowui.hxx
src/win32/: console.cxx  filefinder.hxx  inputbuttons.cxx  msgbox.hxx  time.cxx
