CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PLATFORM "SDL")
# SET(PLATFORM "Qt")
# SET(PLATFORM "WIN32")

SET(RGSS_TYPE "XP")
# SET(RGSS_TYPE "VX")

PROJECT("ARGSS...")

IF(${RGSS_TYPE} STREQUAL XP)
	ADD_DEFINITIONS(-DRPGMAKER=1)
ELSEIF(${RGSS_TYPE} STREQUAL VX)
	ADD_DEFINITIONS(-DRPGMAKER=2)
ENDIF()
ADD_DEFINITIONS(
	-DARGSS_${PLATFORM}
)

SET(SRC_BASE ${CMAKE_CURRENT_SOURCE_DIR}/src)

INCLUDE_DIRECTORIES(
	${SRC_BASE}
	${SRC_BASE}/argss
	${CMAKE_CURRENT_SOURCE_DIR}/dependencies/simpleini
	${CMAKE_CURRENT_SOURCE_DIR}/dependencies/SOIL/src
	${CMAKE_CURRENT_SOURCE_DIR}/dependencies/rubybind
)

AUX_SOURCE_DIRECTORY(${SRC_BASE} SRCS)
AUX_SOURCE_DIRECTORY(${SRC_BASE}/${PLATFORM} SRCS)
AUX_SOURCE_DIRECTORY(${SRC_BASE}/${RGSS_TYPE} SRCS)
AUX_SOURCE_DIRECTORY(${SRC_BASE}/argss SRCS)
AUX_SOURCE_DIRECTORY(${SRC_BASE}/argss/${RGSS_TYPE} SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/dependencies/simpleini SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/dependencies/rubybind/src SRCS)

ADD_EXECUTABLE(
	ARGSS_${RGSS_TYPE}

	${CMAKE_CURRENT_SOURCE_DIR}/dependencies/SOIL/src/image_helper.c
	${CMAKE_CURRENT_SOURCE_DIR}/dependencies/SOIL/src/stb_image_aug.c
	${CMAKE_CURRENT_SOURCE_DIR}/dependencies/SOIL/src/image_DXT.c
	${CMAKE_CURRENT_SOURCE_DIR}/dependencies/SOIL/src/SOIL.c

	${SRCS}
)

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)
SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES}
	${Boost_LIBRARIES}
	${Freetype_LIBRARIES}
	${OpenGL_LIBRARIES}
	${SDL_mixer_LIBRARIES}
	GL
	freetype
	boost_iostreams
	SDL_mixer SDL
)
INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIR}
	${Freetype_INCLUDE_DIR}
	${OpenGL_INCLUDE_DIR}
	${SDL_mixer_INCLUDE_DIR}
	/usr/include/freetype2
)

SET(RUBY_BUILD "i486-linux")
SET(RUBY_VERSION "1.9.2")
# 1.9.1
# 1.9.0
# 1.8
If(${RUBY_VERSION} STREQUAL "1.8")
	INCLUDE_DIRECTORIES(/usr/lib/ruby/${RUBY_VERSION}/${RUBY_BUILD})
	ADD_DEFINITIONS(-DRUBY_VERSION_1_8)
	SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ruby${RUBY_VERSION} )
ELSEIF(${RUBY_VERSION} STREQUAL "1.9.0")
	INCLUDE_DIRECTORIES(
		/usr/include/ruby-${RUBY_VERSION}
		/usr/include/ruby-${RUBY_VERSION}/${RUBY_BUILD} )
	SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ruby1.9 )
ELSEIF(${RUBY_VERSION} STREQUAL "1.9.2")
	SET(RUBY_VERSION "1.9.1")
	SET(RUBY_BUILD "i686-linux")
	INCLUDE_DIRECTORIES(
		/usr/local/include/ruby-${RUBY_VERSION}
		/usr/local/include/ruby-${RUBY_VERSION}/${RUBY_BUILD} )
	LINK_DIRECTORIES(/usr/local/lib)
	SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ruby crypt )
ELSE()
	INCLUDE_DIRECTORIES(
		/usr/include/ruby-${RUBY_VERSION}
		/usr/include/ruby-${RUBY_VERSION}/${RUBY_BUILD} )
	SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ruby-${RUBY_VERSION} )
ENDIF()

IF(${PLATFORM} STREQUAL "SDL")
	FIND_PACKAGE(SDL REQUIRED)
	INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
	SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${SDL_LIBRARIES} )
ENDIF()

TARGET_LINK_LIBRARIES( ARGSS_${RGSS_TYPE} ${EXTERNAL_LIBRARIES} )
